# task-manager

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html  register.html
taskmanager/: settings.py  urls.py
tasks/: admin.py  forms.py  models.py  services.py  urls.py  validator.py  views.py
tasks/templates/tasks/: _header.html  base.html  contact_form.html  contact_success.html  index.html  sprint_detail.html  sprint_form.html  task_detail.html  task_form.html  task_list.html
