[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"
psycopg = "^3.1.9"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "3.15.2"
django-storages = "^1.14.4"
django-widget-tweaks = "^1.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
